@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.venom" version="3.6.6" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
+<addon id="plugin.video.venom" version="3.6.7" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
 
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
@@ -38,13 +38,14 @@
 			<screenshot>resources/screenshots/screenshot003.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v3.6.6 - May 14, 2020[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Fixed Remove HVAC and Remove 3D options.
-    Previousely there would be random failures if specific
-    free hosters were enabled.  Some free hosters were
-    missing 'info' keys in the sources dict.  This has been
-    fixed in both Venom and missing keys added to
-    OpenScrapers.[/I]
+[B][COLOR red]Update - v3.6.7 - May 14, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed Library .strm playback. Previous update added ability
+    to compare meta received from tmdbhelper vs. Venom's
+    cached meta and use the largest.  I neglected that .strm
+    files are also player files and meta sent is None type. Now
+    I compare this as well and if the item is cached that meta
+    is now used vs. scraped meta saved locally, which is more
+    limited than Venom's cached meta.[/I]
 		</news>
 	</extension>
 </addon>
