@@ -1,3 +1,12 @@
+[B][COLOR red]Update - v3.6.7 - May 14, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed Library .strm playback. Previous update added ability
+    to compare meta received from tmdbhelper vs. Venom's
+    cached meta and use the largest.  I neglected that .strm
+    files are also player files and meta sent is None type. Now
+    I compare this as well and if the item is cached that meta
+    is now used vs. scraped meta saved locally, which is more
+    limited than Venom's cached meta.[/I]
+
 [B][COLOR red]Update - v3.6.6 - May 14, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Fixed Remove HVAC and Remove 3D options.
     Previousely there would be random failures if specific
